ftl (0.2.6)

  * S3 Errors during spool were ignored

-- Rhett Garber <rhettg@gmail.com>  Tue, 10 Jun 2014 10:48:00 -0700

ftl (0.2.5)

  * Fix crash when doing initial master jump

-- Rhett Garber <rhettg@gmail.com>  Wed, 26 Feb 2014 15:02:00 -0800

ftl (0.2.4)

  * Fix revision formatting to avoid bad sorts on time.

-- Rhett Garber <rhettg@gmail.com>  Wed, 29 Jan 2014 19:17:00 -0800

ftl (0.2.3)

  * Don't purge local revisions just because they are behind previous

-- Rhett Garber <rhettg@gmail.com>  Mon, 2 Dec 2013 15:57:00 -0800

ftl (0.2.2)

  * Fix a bug with empty syncs

-- Rhett Garber <rhettg@gmail.com>  Mon, 2 Dec 2013 15:26:00 -0800

ftl (0.2.1)

  * Fix a bug with cleaning up symlinks during jump

-- Rhett Garber <rhettg@gmail.com>  Wed, 27 Nov 2013 18:08:00 -0800

ftl (0.2.0)

  * Limit how many revisions are downloaded on sync.
  * Split up downloading and purging steps on sync.
  * Concurrent downloads.

-- Rhett Garber <rhettg@gmail.com>  Tue, 26 Nov 2013 10:36:00 -0800

ftl (0.1.0)

  * Initial Numbered Release

-- Rhett Garber <rhettg@gmail.com>  Mon, 25 Nov 2013 16:19:00 -0800